--- a/clint/index.html
+++ b/clint/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -26,26 +27,36 @@
 
 <body>
 
-  <div class="container">
+  <div class="container position-relative">
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
           <img src="images/bg-main-desktop.png" class="img-fluid rounded-start" alt="...">
         </div>
+        
+
+        <div class="front-card position-absolute">
+          <img class="" src="../clint/images/bg-card-front.png" alt="">
+        </div>
+
+        <div class="back-card position-absolute">
+          <img class="" src="../clint/images/bg-card-back.png" alt="">
+        </div>
+        
         <div class="col-md-8">
           <div class="card-body ms-5">
-            <h5 class="card-title">Loan State Prediction</h5>
-            <div class="card-text">
-<form action="">
+            <h1 class="card-title m-5 text-center">Loan State Prediction</h1>
+            <div class="card-text text-center">
+<!-- <form action="" class="text-center"> -->
               <div class="row mb-5">
                 <div class="col-md-4">
                   <label class="d-block">ginder:</label>
                   <br>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="Male" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="gender" id="Male" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="Male">Male</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="female" autocomplete="off">
+                    <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off">
                     <label class="btn btn-outline-primary" for="female">Female</label>
                   </div>
                 </div>
@@ -54,10 +65,10 @@
                   <label class="d-block">married:</label>
                   <br>
                   <div class="btn-group" role="marriedgroup" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="marriedYes" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="married" id="marriedYes" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="marriedYes">Yes</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="marriedNo" autocomplete="off">
+                    <input type="radio" class="btn-check" name="married" id="marriedNo" autocomplete="off">
                     <label class="btn btn-outline-primary" for="marriedNo">No</label>
                   </div>
                 </div>
@@ -66,16 +77,16 @@
                   <label class="d-block">dependents:</label>
                   <br>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="ZeroDep" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="dependents" id="ZeroDep" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="ZeroDep">0</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="OneDep" autocomplete="off">
+                    <input type="radio" class="btn-check" name="dependents" id="OneDep" autocomplete="off">
                     <label class="btn btn-outline-primary" for="OneDep">1</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="TwoDep" autocomplete="off">
+                    <input type="radio" class="btn-check" name="dependents" id="TwoDep" autocomplete="off">
                     <label class="btn btn-outline-primary" for="TwoDep">2</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="ThreeDep" autocomplete="off">
+                    <input type="radio" class="btn-check" name="dependents" id="ThreeDep" autocomplete="off">
                     <label class="btn btn-outline-primary" for="ThreeDep">3+</label>
                   </div>
                 </div>
@@ -87,10 +98,10 @@
                   <label class="d-block">Education:</label>
                   <br>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="Graduate" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="Education" id="Graduate" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="Graduate">Graduate</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="NGraduate" autocomplete="off">
+                    <input type="radio" class="btn-check" name="Education" id="NGraduate" autocomplete="off">
                     <label class="btn btn-outline-primary" for="NGraduate">not Graduate</label>
                   </div>
                 </div>
@@ -99,10 +110,10 @@
                   <label class="d-block">Employed:</label>
                   <br>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="EmployedYes" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="Employed" id="EmployedYes" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="EmployedYes">Yes</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="EmployedNo" autocomplete="off">
+                    <input type="radio" class="btn-check" name="Employed" id="EmployedNo" autocomplete="off">
                     <label class="btn btn-outline-primary" for="EmployedNo">No</label>
                   </div>
                 </div>
@@ -111,39 +122,41 @@
                   <label class="d-block">Credit History:</label>
                   <br>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="CHGood" autocomplete="off" checked>
+                    <input type="radio" class="btn-check" name="Credit" id="CHGood" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="CHGood">Good</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="CHBad" autocomplete="off">
+                    <input type="radio" class="btn-check" name="Credit" id="CHBad" autocomplete="off">
                     <label class="btn btn-outline-primary" for="CHBad">Bad</label>
                   </div>
                 </div>
 
               </div>
 
-              <div class="row">
+              <div class="row mb-5">
                 <div class="col-md-4 ">
                   <div class="form-floating mb-3">
-                    <input type="input" class="form-control" id="loan_amount" placeholder="name@example.com">
+                    <input type="number" class="form-control" id="loan_amount" placeholder="Loan Amount">
                     <label for="loan_amount">Loan Amount</label>
                   </div>
                 </div>
                 <div class="col-md-4 ">
                   <div class="form-floating mb-3">
-                    <input type="input" class="form-control" id="loan_amount_term" placeholder="name@example.com">
+                    <input type="number" class="form-control" id="loan_amount_term" placeholder="Loan Amount Term">
                     <label for="loan_amount_term">Loan Amount Term</label>
                   </div>
                 </div>
                 <div class="col-md-4 ">
                   <div class="form-floating mb-3">
-                    <input type="input" class="form-control" id="total_income" placeholder="name@example.com">
+                    <input type="number" class="form-control" id="total_income" placeholder="Total Income">
                     <label for="total_income">Total Income</label>
                   </div>
                 </div>
               </div>
 
               <button type="submit" class="btn btn-primary">Predict</button>
-            </form>
+            <!-- </form> -->
+            <div class="pridect-result">
+            </div>
             </div>
           </div>
         </div>
@@ -151,36 +164,9 @@
     </div>
   </div>
 
-  <!-- 0000 0000 0000 0000
-    Jane Appleseed
-    00/00
-
-    000
-
-    Cardholder Name
-    e.g. Jane Appleseed
-
-    Card Number
-    e.g. 1234 5678 9123 0000
-
-    Exp. Date (MM/YY)
-    MM
-    YY
-
-    CVC
-    e.g. 123
-
-    Confirm
-
-    Completed state start -->
-
-  <!-- Thank you!
-    We've added your card details
-    Continue -->
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/non77o1">Hneen</a>.
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
