--- a/clint/index.html
+++ b/clint/index.html
@@ -12,17 +12,7 @@
 
   <title>Frontend Mentor | Interactive card details form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -33,25 +23,28 @@
         <div class="col-md-4">
           <img src="images/bg-main-desktop.png" class="img-fluid rounded-start" alt="...">
         </div>
-        
+
 
         <div class="front-card position-absolute">
+          <span class="card-number position-absolute">1234 5678 9123 0000</span>
+          <span class="card-date position-absolute">09/28</span>
+          <span class="card-name position-absolute">Hneen AI</span>
           <img class="" src="../clint/images/bg-card-front.png" alt="">
         </div>
 
         <div class="back-card position-absolute">
+          <span class="card-cvv position-absolute">123</span>
           <img class="" src="../clint/images/bg-card-back.png" alt="">
         </div>
-        
+
         <div class="col-md-8">
           <div class="card-body ms-5">
             <h1 class="card-title m-5 text-center">Loan State Prediction</h1>
             <div class="card-text text-center">
-<!-- <form action="" class="text-center"> -->
+              <!-- <form action="" class="text-center"> -->
               <div class="row mb-5">
                 <div class="col-md-4">
-                  <label class="d-block">ginder:</label>
-                  <br>
+                  <label class="d-block mb-2">ginder:</label>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="gender" id="Male" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="Male">Male</label>
@@ -62,8 +55,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <label class="d-block">married:</label>
-                  <br>
+                  <label class="d-block mb-2">married:</label>
                   <div class="btn-group" role="marriedgroup" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="married" id="marriedYes" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="marriedYes">Yes</label>
@@ -74,8 +66,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <label class="d-block">dependents:</label>
-                  <br>
+                  <label class="d-block mb-2">dependents:</label>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="dependents" id="ZeroDep" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="ZeroDep">0</label>
@@ -95,8 +86,7 @@
 
               <div class="row mb-5">
                 <div class="col-md-4 ">
-                  <label class="d-block">Education:</label>
-                  <br>
+                  <label class="d-block mb-2">Education:</label>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="Education" id="Graduate" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="Graduate">Graduate</label>
@@ -107,8 +97,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <label class="d-block">Employed:</label>
-                  <br>
+                  <label class="d-block mb-2">Employed:</label>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="Employed" id="EmployedYes" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="EmployedYes">Yes</label>
@@ -119,8 +108,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <label class="d-block">Credit History:</label>
-                  <br>
+                  <label class="d-block mb-2">Credit History:</label>
                   <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="Credit" id="CHGood" autocomplete="off" checked>
                     <label class="btn btn-outline-primary" for="CHGood">Good</label>
@@ -153,24 +141,27 @@
                 </div>
               </div>
 
-              <button type="submit" class="btn btn-primary">Predict</button>
-            <!-- </form> -->
-            <div class="pridect-result">
-            </div>
+              <button type="submit" class="btn btn-primary" onclick="getValues">Predict</button>
+              <!-- </form> -->
+              <div class="pridect-result">
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/non77o1">Hneen</a>.
   </div>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
